--- a/style.css
+++ b/style.css
@@ -632,15 +632,10 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }*/
 
 .bck-title-1 {
-    color: #EC6F59;
-    border: 2px solid #ec6f59 !important;
-    font-size: 2.4rem;
-    background: #ffffff;
-    width: fit-content;
-    padding: 7PX 30PX 7px 24px;
-    border-radius: 30px 10px 37px 10px;
+    color: #EF3D61;
+    font-size: 28px;
     font-weight: 700;
-    font-family: 'StradaOT-Semibd';
+    font-family: 'Supernett cn';
     text-transform: uppercase;
 }
 
@@ -651,13 +646,11 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }
 
 .bck-title-2 {
-    color: #EC6F59;
-    font-size: 2.5rem;
-    text-align: left;
-    font-family: 'ZineSlabDisOT-Medi';
-    padding-top: 10px;
-    font-weight: 400;
-    margin-left: -25px;
+    color: #EF3D61;
+    font-size: 25px;
+    font-weight: 700;
+    font-family: 'Supernett cn';
+    font-style: italic;
 }
 
 .bck-title-3 {
@@ -1077,9 +1070,8 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 
 .bck-enfasis-1 {
     padding: 7px 18px;
-    /* border: 4px solid #FFCF01; */
-    background-color: #DAEDF8;
-    border-radius: 155px 55px 119px 67px/55px 125px 31px 111px;
+    background-color: #FFF9AD;
+    border-radius: 55px 125px 31px 111px/108px 65px 125px 50px;
 }
 
 .bck-enfasis-2 {
@@ -1397,6 +1389,7 @@ padding-left: 36px;
     font-weight: 100;
     margin-left: 13px;
     color: inherit;
+    font-family: 'Titillium';
 }
 
 #actividad .content .cke_contents .bck-ul-1 li:before,
