--- a/style.css
+++ b/style.css
@@ -656,26 +656,9 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }
 
 .bck-title-3 {
-    color: #006F41;
-    font-size: 2.5rem;
-    text-align: left;
-    font-family: 'ZineSlabDisOT-Medi';
-    padding-top: 10px;
-    font-weight: 400;
-}
-
-.bck-title-3:before {
-    content: "WRITING SKILL";
-    z-index: 100;
-    width: 18%;
-    padding: 10px 11px 10px 24px;
-    background-color: #007c39;
-    display: inline-block;
-    color: #fff;
-    -moz-border-radius: 20px 0 0 50px;
-    border-radius: 20px 0 0 50px;
-    margin-right: 6px;
-    vertical-align: sub;
+    color: #EF3D61;
+    font-weight: 600;
+    font-family: 'Titillium';
 }
 
 .bck-title-4 {
