--- a/style.css
+++ b/style.css
@@ -3300,6 +3300,22 @@ display: none;
 }
 
 .item-container .icon-lapiz:before {
+    background-image: url(images/icono_lupa.png);
+            content: "";
+    background-repeat: no-repeat;
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
+    background-position: 50%;
+    display: inline-block;
+    vertical-align: sub;
+    margin-right: 10px;
+    height: 26px;
+    width: 27px;
+}
+
+.item-container .icon-lupa:before {
     background-image: url(images/icono_lapiz.png);
             content: "";
     background-repeat: no-repeat;
