--- a/style.css
+++ b/style.css
@@ -1070,17 +1070,13 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }
 
 .bck-enfasis-3 {
-    font-size: 2rem;
-    color: #6C808B;
-    font-weight: 500;
-    font-style: italic;
+    color: #EF3D61;
+    font-weight: inherit;
 }
 
 .bck-enfasis-4 {
-    padding: 7px 18px;
-    /* border: 4px solid #FFCF01; */
-    background-color: #fff;
-    border-radius: 155px 55px 119px 67px/55px 125px 31px 111px;
+    font-style: italic;
+    font-size: 18px;
 }
 
 .bck-enfasis-5 {
@@ -1542,7 +1538,7 @@ content: counter(bck-li-counter);
     background: #EF3D61;
     border: 1px solid #ef3d61;
     border-radius: 100%;
-    margin-left: -40px;
+    margin-left: -35px;
     margin-right: 0;
     text-align: right;
     font-family: 'Atma';
@@ -1588,7 +1584,7 @@ content: counter(bck-li-counter);
     position: absolute;
     color: #ef3d61;
     border-radius: 100%;
-    margin-left: -40px;
+    margin-left: -35px;
     margin-right: 0;
     text-align: right;
     font-family: 'Atma';
