--- a/style.css
+++ b/style.css
@@ -1070,10 +1070,9 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }
 
 .bck-enfasis-8 {
-    border-radius: 12px;
-    padding: 7px 15px;
-    background-color: #922790;
-    color: #fff;
+    color: #90C73E;
+    font-size: 23px;
+    font-family: 'Supernett cn';
 }
 
 .bck-enfasis-9 {
