--- a/style.css
+++ b/style.css
@@ -1639,20 +1639,19 @@ counter-increment: bck-li-counter;
 #actividad .content .texto_curso ol.bck-ol-4 li:before, 
 #actividad .content .workspace ul li ol.bck-ol-4 li:before, 
 #actividad .popover-content ol.bck-ol-4 li:before {
-        color: #78AA42;
     content: counter(bck-li-counter);
-    width: 32px;
-    height: 27px;
+    height: 25px;
     position: absolute;
-    background: none;
-    margin-left: -40px;
+    color: #ef3d61;
+    border-radius: 100%;
+    margin-left: -35px;
     margin-right: 0;
     text-align: right;
-    font-family: 'ZineSlabDisOT';
-    font-size: 2.3rem;
+    font-family: 'Titillium';
     font-weight: 600;
-    line-height: normal;
-    top: 4px;
+    top: 0px;
+    text-align: center;
+    width: 30px;
     left: auto;
 }
 
